# leadgeneration

./: .gitignore  README.MD  pyproject.toml
leadgen/: __init__.py  cli.py  filters.py  models.py
leadgen/sources/: __init__.py  yellowpages.py
tests/: test_filters.py  test_yellowpages.py
